# observalog

./: .env.example  .gitignore  README.md  docker-compose.yml
.claude/: launch.json  settings.local.json
.github/workflows/: brain.yml  contract-parity.yml  go.yml  java.yml  node.yml  (+6 more)
docs/: deployment-guide.md  event-grammar.md  gtm-strategy.md  pitch-deck.md  whitepaper.md  wire-format.md
logscanner/: .gitignore  Cargo.toml  README.md
logscanner/src/: finding.rs  grammar.rs  lib.rs  main.rs  scanner.rs
logscanner/src/go/: classify.rs  mod.rs  walker.rs
logscanner/src/go/rules/: mod.rs
logscanner/src/java/: mod.rs  walker.rs
logscanner/src/java/rules/: mod.rs
logscanner/src/node/: mod.rs  walker.rs
logscanner/src/node/rules/: mod.rs
observalog-brain/: Cargo.toml  Dockerfile  README.md
observalog-brain/src/: lib.rs  main.rs  ws.rs
observalog-brain/src/db/: queries.rs  schema.rs
observalog-brain/src/ingest/: kafka.rs  mod.rs  parser.rs  wire_contract.rs  writer.rs  writer_contract.rs
observalog-brain/src/triage/: chain.rs  classify.rs  context.rs  dedup.rs  environment.rs  gap.rs  llm.rs  mod.rs  repair.rs
observalog-go/: README.md  async.go  config.go  context.go  degrade.go  degrade_test.go  dict.go  emit.go  emit_contract.go  emit_test.go  fields.go  fingerprint.go  fingerprint_test.go  go.mod  go.sum  wire.go  wire_contract.go  wire_test.go
observalog-handoff/: AGENTS.md  BUILD_SEQUENCE.md  CLAUDE.md  CONTRACT_REFERENCE.md  DECISIONS.md  DEPENDENCY_GRAPH.md  SCANNER_RULES.md  TIMESCALE_SCHEMA.md
observalog-java/: pom.xml
observalog-node/: package-lock.json  package.json  tsconfig.json
site/: index.html
(+47 files in other folders)
