[package]
name = "logscanner"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
walkdir = "2.4"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
lazy_static = "1.4"

[profile.release]
opt-level = 3
lto = true
